# caliphate-school-portal

./: .gitignore  AUDIT_REPORT.md  CHANGES.md  README.md
backend/: .env.example  .env.production.example  .gitignore  Dockerfile  alembic.ini  caliphate_school.db  create_admin.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 004_part2a_admission_students_academics.py  009_part3c_final.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  email_service.py  excel_service.py  exceptions.py  json_store.py  pdf_service.py  rbac.py  scheduler.py  search_export.py  security.py  security_headers.py  security_middleware.py  upload_service.py
backend/app/models/: __init__.py  academic.py  attendance.py  base.py  cms.py  enums.py  examination.py  file.py  finance.py  gallery.py  notification.py  school.py  settings.py  student.py  uniform.py  user.py
backend/app/repositories/: __init__.py  academic_repo.py  base.py  finance_repo.py  student_repo.py  user_repo.py
backend/app/schemas/: __init__.py  academic.py  attendance.py  auth.py  cms.py  common.py  examination.py  finance.py  user.py  (+4 more)
backend/scripts/: reset_password.py  seed_admin.py  seed_demo.py
backend/tests/: conftest.py  test_academics.py  test_admissions_pipeline.py  test_auth.py  test_authorization.py  test_automation.py  test_config.py  test_exports.py  test_finance.py  test_gallery.py  test_promotion.py  test_reports.py  test_smoke_all_routes.py  test_students_crud.py  test_teachers_and_schedule.py
(+301 files in other folders)
