[project]
name = "caliphate-school-portal-backend"
version = "1.0.0"
description = "Enterprise School Portal Backend for Caliphate International Schools Gusau Ltd"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
